project(habrahabr_calltable_module)
set( SOURCE_ROOT ./src )
include_directories(../src)
set (CMAKE_CXX_STANDARD 17)
aux_source_directory( ${SOURCE_ROOT} SOURCES )
add_library(${PROJECT_NAME} SHARED ${SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 -Wall -Wextra -O2")
target_link_libraries(${PROJECT_NAME} dl -pthread)
